--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		<h3>Section Service</h3>
 		<p>new section for service</p>
 	</section>
+	<h1>this is structure for all pages</h1>
 </body>
 
 </html>
