added new section element, with inner div elements.

--- a/index.html
+++ b/index.html
@@ -8,14 +8,66 @@
 </head>
 
 <body>
-	<h1>This is header</h1>
-	<p>this is paragraph</p>
-
-	<section>
-		<h3>Section Service</h3>
-		<p>new section for service</p>
-	</section>
-	<h1>this is structure for all pages</h1>
+	<!-- Implement services grid -->
+	 <section>
+		<!-- container -->
+		<div>
+			<!-- section-header text-center -->
+			<div>
+				<!-- badge -->
+				<div>why choose us</div>
+				<h2>Comprehensive Dental Care</h2>
+				<p>we offer a wide range ...</p>
+			</div>
+			<!-- servicec-grid -->
+			<div>
+				<!-- service-card -->
+				<div>
+					<!-- service-icon -->
+					<div>
+						<img>
+					</div>
+					<h3>Preventive Care</h3>
+					<p>Regular check-ups ...</p>
+				</div>
+				<div>
+					<div>
+						<img>
+					</div>
+					<h3>Preventive Care</h3>
+					<p>Regular check-ups ...</p>
+				</div>
+				<div>
+					<div>
+						<img>
+					</div>
+					<h3>Preventive Care</h3>
+					<p>Regular check-ups ...</p>
+				</div>
+				<div>
+					<div>
+						<img>
+					</div>
+					<h3>Preventive Care</h3>
+					<p>Regular check-ups ...</p>
+				</div>
+				<div>
+					<div>
+						<img>
+					</div>
+					<h3>Preventive Care</h3>
+					<p>Regular check-ups ...</p>
+				</div>
+				<div>
+					<div>
+						<img>
+					</div>
+					<h3>Preventive Care</h3>
+					<p>Regular check-ups ...</p>
+				</div>
+			</div>
+		</div>
+	 </section>
 </body>
 
 </html>
