Structure is implemented, added empty style and javascript file source.

--- a/index.html
+++ b/index.html
@@ -4,70 +4,95 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>Dentiluri - Dental & Esthetic</title>
+	<meta name="description" content="Professional dental care for the whole family">
+
+	<!-- Stylesheets -->
+	<link rel="stylesheet" href="assets/css/global.css">
+	<link rel="stylesheet" href="assets/css/components.css">
+	<link rel="stylesheet" href="assets/css/pages/home.css">
+
+	<!-- Favicon -->
+	<link rel="icon" href="assets/images/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
-	<!-- Implement services grid -->
-	 <section>
-		<!-- container -->
-		<div>
-			<!-- section-header text-center -->
+	<!-- Header will be injected by JavaScript -->
+	<header id="site-header" class="site-header"></header>
+
+	<main class="main-content" id="main-content">
+		<!-- hero-section -->
+
+		<!-- Implement services grid -->
+		<section>
+			<!-- container -->
 			<div>
-				<!-- badge -->
-				<div>why choose us</div>
-				<h2>Comprehensive Dental Care</h2>
-				<p>we offer a wide range ...</p>
+				<!-- section-header text-center -->
+				<div>
+					<!-- badge -->
+					<div>why choose us</div>
+					<h2>Comprehensive Dental Care</h2>
+					<p>we offer a wide range ...</p>
+				</div>
+				<!-- servicec-grid -->
+				<div>
+					<!-- service-card -->
+					<div>
+						<!-- service-icon -->
+						<div>
+							<img>
+						</div>
+						<h3>Preventive Care</h3>
+						<p>Regular check-ups ...</p>
+					</div>
+					<div>
+						<div>
+							<img>
+						</div>
+						<h3>Preventive Care</h3>
+						<p>Regular check-ups ...</p>
+					</div>
+					<div>
+						<div>
+							<img>
+						</div>
+						<h3>Preventive Care</h3>
+						<p>Regular check-ups ...</p>
+					</div>
+					<div>
+						<div>
+							<img>
+						</div>
+						<h3>Preventive Care</h3>
+						<p>Regular check-ups ...</p>
+					</div>
+					<div>
+						<div>
+							<img>
+						</div>
+						<h3>Preventive Care</h3>
+						<p>Regular check-ups ...</p>
+					</div>
+					<div>
+						<div>
+							<img>
+						</div>
+						<h3>Preventive Care</h3>
+						<p>Regular check-ups ...</p>
+					</div>
+				</div>
 			</div>
-			<!-- servicec-grid -->
-			<div>
-				<!-- service-card -->
-				<div>
-					<!-- service-icon -->
-					<div>
-						<img>
-					</div>
-					<h3>Preventive Care</h3>
-					<p>Regular check-ups ...</p>
-				</div>
-				<div>
-					<div>
-						<img>
-					</div>
-					<h3>Preventive Care</h3>
-					<p>Regular check-ups ...</p>
-				</div>
-				<div>
-					<div>
-						<img>
-					</div>
-					<h3>Preventive Care</h3>
-					<p>Regular check-ups ...</p>
-				</div>
-				<div>
-					<div>
-						<img>
-					</div>
-					<h3>Preventive Care</h3>
-					<p>Regular check-ups ...</p>
-				</div>
-				<div>
-					<div>
-						<img>
-					</div>
-					<h3>Preventive Care</h3>
-					<p>Regular check-ups ...</p>
-				</div>
-				<div>
-					<div>
-						<img>
-					</div>
-					<h3>Preventive Care</h3>
-					<p>Regular check-ups ...</p>
-				</div>
-			</div>
-		</div>
-	 </section>
+		</section>
+
+	</main>
+
+	<!-- Footer will be injected by JavaScript -->
+	<footer id="site-footer" class="site-footer"></footer>
+
+	<!-- Scripts -->
+	<script src="assets/js/main.js" type="module"></script>
+	<script src="assets/js/pages/home.js" type="module"></script>
+
 </body>
 
 </html>
