title text modified.

--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>About Us - Dentiluri Dental</title>
-	<meta name="description" content="Learn about Dentiluri Dental's history, team, and mission">
+	<title>About Us - Dentiluri</title>
+	<meta name="description" content="Learn about Dentiluri's history, team, and mission">
 
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="assets/css/global.css">
