Created container with h1 and p elements

--- a/about.html
+++ b/about.html
@@ -22,6 +22,17 @@
 
 	<main class="main-content" id="main-content">
 		<!-- hero-section -->
+<section>
+	<!-- container -->
+	<div>
+		<!-- text-center -->
+		<div>
+			<h1>About Dentilur</h1>
+			<p>Template Dentilur</p>
+		</div>
+	</div>
+
+</section>
 
 	</main>
 
