add hero section structures

--- a/index.html
+++ b/index.html
@@ -22,7 +22,32 @@
 
 	<main class="main-content" id="main-content">
 		<!-- hero-section -->
-
+     <section>
+		<!-- container -->
+		<div>
+			<!-- hero-grid  -->
+			<div>
+				<!-- hero-content -->
+				<div>
+					<!-- hero-text -->
+					<div>
+						<h1>Your Smile, Our Passion.</h1>
+						<p>Experience exceptional dental care with our team</p>
+					</div>
+					<!-- hero-buttons -->
+					<div>
+						<a href="#">Book an Appointment</a>
+						<a href="#">Our Services</a>
+					</div>
+				</div>
+				<!-- hero-imege -->
+				<div>
+					<img src="" alt="">
+					
+				</div>
+			</div>
+		</div>
+	 </section>
 		<!-- Implement services grid -->
 		<section>
 			<!-- container -->
