add  team section structures

--- a/index.html
+++ b/index.html
@@ -108,7 +108,55 @@
 				</div>
 			</div>
 		</section>
-
+     <!-- team-section -->
+	  <section>
+		<!-- container -->
+		<div>
+			<!-- section-header -->
+			<div>
+				<h2>Meet Our Dental Team</h2>
+				<p>Our experienced</p>
+			</div>
+			<!-- team-grid -->
+			<div> 
+				<!-- team-member -->
+				<div>
+					<img src="" alt="">
+					<!-- team-info -->
+					<div>
+						<h3></h3>
+						<p></p>
+						<p></p>
+					</div>
+				</div>
+				<!-- team-member -->
+				<div>
+					<img src="" alt="">
+					<!-- team-info -->
+					<div>
+						<h3></h3>
+						<p></p>
+						<p></p>
+					</div>
+				</div>
+				<!-- team-member -->
+				<div>
+					<img src="" alt="">
+					<!-- team-info -->
+					<div>
+						<h3></h3>
+						<p></p>
+						<p></p>
+					</div>
+				</div>
+				
+			</div>
+			<!-- text-center -->
+			<div>
+				<a href="about.html">meet our full team</a>
+			</div>
+		</div>
+	  </section>
 	</main>
 
 	<!-- Footer will be injected by JavaScript -->
