Created Story Section

--- a/about.html
+++ b/about.html
@@ -34,7 +34,26 @@
 
 </section>
 
-	</main>
+<!-- story-section  -->
+<section>
+	<!-- container  -->
+	<div>
+		<!-- Grid-2-Columns  -->
+		<div>
+			<img src="" alt="">
+			<!-- Content  -->
+			<div>
+				<h2>
+					Our Story
+				</h2>
+				<p> </p>
+				<p> </p>
+				<p> </p>
+			</div>
+		</div>
+	</div>
+</section>
+</main>
 
 	<!-- Footer will be injected by JavaScript -->
 	<footer id="site-footer" class="site-footer"></footer>
