added empty section element.

--- a/services.html
+++ b/services.html
@@ -22,7 +22,20 @@
 
 	<main class="main-content" id="main-content">
 		<!-- hero-section -->
-
+    <section>
+		<!-- container -->
+		<div >
+			<!-- text-context -->
+			<div>
+				<h1>
+             Our dental servicies
+				</h1>
+				<p>
+            Dental care: good teeth.
+			   </p>
+			</div>
+		</div>
+	</section>
 	</main>
 
 	<!-- Footer will be injected by JavaScript -->
