empty section element for service section

--- a/services.html
+++ b/services.html
@@ -36,6 +36,46 @@
 			</div>
 		</div>
 	</section>
+	<section>
+		<!-- container -->
+		<div>
+			<!-- grid-2-column -->
+        <div>
+			<!-- content -->
+			<div>
+             <h1>
+             Maintain your smile
+			 </h1>
+			 <p>
+            good teeth
+			 </p>
+			 <!-- services-list -->
+			<div> 
+				<!-- service-item -->
+				<div>
+					<img src="" alt="" srcset=""> <p></p>
+				</div>
+				<div>
+					<img src="" alt="" srcset=""> <p></p>
+				</div>
+				<div>
+					<img src="" alt="" srcset=""> <p></p>
+				</div>
+				<div>
+					<img src="" alt="" srcset=""> <p></p>
+				</div>
+				<div>
+					<img src="" alt="" srcset=""> <p></p>
+				</div>
+			</div>
+			</div>
+			<!-- image -->
+			<div>
+				<img scr="" alt="" > 
+			</div>
+		</div>
+		</div>
+	</section>
 	</main>
 
 	<!-- Footer will be injected by JavaScript -->
