--- a/services.html
+++ b/services.html
@@ -43,9 +43,101 @@
         <div>
 			<!-- content -->
 			<div>
-             <h1>
+				<!-- badge -->
+				<div>
+					preventive care
+				</div>
+             <h2>
              Maintain your smile
-			 </h1>
+			 </h2>
+			 <p>
+            good teeth
+			 </p>
+			 <!-- services-list -->
+			<div> 
+				<!-- service-item -->
+				<div>
+					<img src="" alt="" srcset=""> <p></p>
+				</div>
+				<div>
+					<img src="" alt="" srcset=""> <p></p>
+				</div>
+				<div>
+					<img src="" alt="" srcset=""> <p></p>
+				</div>
+				<div>
+					<img src="" alt="" srcset=""> <p></p>
+				</div>
+				<div>
+					<img src="" alt="" srcset=""> <p></p>
+				</div>
+			</div>
+			</div>
+			<!-- image -->
+			<div>
+				<img scr="" alt="" > 
+			</div>
+		</div>
+		</div>
+	</section>
+	<section>
+		<!-- container -->
+		<div>
+			<!-- grid-2-column -->
+        <div>
+			<!-- content -->
+			<div>
+				<!-- badge -->
+				<div>
+					preventive care
+				</div>
+             <h2>
+             Maintain your smile
+			 </h2>
+			 <p>
+            good teeth
+			 </p>
+			 <!-- services-list -->
+			<div> 
+				<!-- service-item -->
+				<div>
+					<img src="" alt="" srcset=""> <p></p>
+				</div>
+				<div>
+					<img src="" alt="" srcset=""> <p></p>
+				</div>
+				<div>
+					<img src="" alt="" srcset=""> <p></p>
+				</div>
+				<div>
+					<img src="" alt="" srcset=""> <p></p>
+				</div>
+				<div>
+					<img src="" alt="" srcset=""> <p></p>
+				</div>
+			</div>
+			</div>
+			<!-- image -->
+			<div>
+				<img scr="" alt="" > 
+			</div>
+		</div>
+		</div>
+	</section>
+	<section>
+		<!-- container -->
+		<div>
+			<!-- grid-2-column -->
+        <div>
+			<!-- content -->
+			<div>
+				<!-- badge -->
+				<div>
+					preventive care
+				</div>
+             <h2>
+             Maintain your smile
+			 </h2>
 			 <p>
             good teeth
 			 </p>
