added contact section elements.

--- a/index.html
+++ b/index.html
@@ -225,6 +225,67 @@
 			</div>
 		</div>
 	</section>
+	<section>
+		<div>
+			<div>
+				<div>
+					<h2>Contact Us</h2>
+					<p>Have questions...</p>
+				    <div>
+						<div>
+							<div><img src="#" alt="#"></div>
+							<div>
+								<p>Location</p>
+								<p>123 Dental way...</p>
+							</div>
+						</div>
+						<div>
+							<div><img src="#" alt="#"></div>
+							<div>
+								<p>Phone...</p>
+								<p>555...</p>
+							</div>
+						</div>
+						<div>
+							<div><img src="#" alt="#"></div>
+							<div>
+								<p>Hours</p>
+								<p>Hours</p>
+								<p>monday-fryday...</p>
+                                <p>Saturday...</p>
+								<p>sunday...</p>
+							</div>	
+						</div>
+					</div> 
+				</div>
+				<!-- meore charcho -->
+				<div>
+					<form action="#">
+
+						<div>
+							<div>
+								<label for="">First name</label>
+								<input type="text">
+							</div>
+							<div>
+								<label for="">Last name</label>
+								<input type="text">
+							</div>
+						</div>
+						<div>
+							<label for="">Email</label>
+								<input type="text">
+						</div>
+						<div>
+							<label for="">Message</label>
+								<input type="text">
+						</div>
+						<button>send masseges</button>
+					</form>
+				</div>
+			</div>
+		</div>
+	</section>
 	</main>
 
 	<!-- Footer will be injected by JavaScript -->
