prettier and typo correction

--- a/index.html
+++ b/index.html
@@ -22,32 +22,32 @@
 
 	<main class="main-content" id="main-content">
 		<!-- hero-section -->
-     <section>
-		<!-- container -->
-		<div>
-			<!-- hero-grid  -->
+		<section>
+			<!-- container -->
 			<div>
-				<!-- hero-content -->
+				<!-- hero-grid  -->
 				<div>
-					<!-- hero-text -->
+					<!-- hero-content -->
 					<div>
-						<h1>Your Smile, Our Passion.</h1>
-						<p>Experience exceptional dental care with our team</p>
+						<!-- hero-text -->
+						<div>
+							<h1>Your Smile, Our Passion.</h1>
+							<p>Experience exceptional dental care with our team</p>
+						</div>
+						<!-- hero-buttons -->
+						<div>
+							<a href="#">Book an Appointment</a>
+							<a href="#">Our Services</a>
+						</div>
 					</div>
-					<!-- hero-buttons -->
+					<!-- hero-image -->
 					<div>
-						<a href="#">Book an Appointment</a>
-						<a href="#">Our Services</a>
+						<img src="" alt="">
+
 					</div>
-				</div>
-				<!-- hero-imege -->
-				<div>
-					<img src="" alt="">
-					
 				</div>
 			</div>
-		</div>
-	 </section>
+		</section>
 		<!-- Implement services grid -->
 		<section>
 			<!-- container -->
@@ -59,7 +59,7 @@
 					<h2>Comprehensive Dental Care</h2>
 					<p>we offer a wide range ...</p>
 				</div>
-				<!-- servicec-grid -->
+				<!-- services-grid -->
 				<div>
 					<!-- service-card -->
 					<div>
@@ -108,89 +108,89 @@
 				</div>
 			</div>
 		</section>
-     <!-- team-section -->
-	  <section>
-		<!-- container -->
-		<div>
-			<!-- section-header -->
+		<!-- team-section -->
+		<section>
+			<!-- container -->
 			<div>
-				<h2>Meet Our Dental Team</h2>
-				<p>Our experienced</p>
-			</div>
-			<!-- team-grid -->
-			<div> 
-				<!-- team-member -->
+				<!-- section-header -->
 				<div>
-					<img src="" alt="">
-					<!-- team-info -->
-					<div>
-						<h3></h3>
-						<p></p>
-						<p></p>
-					</div>
+					<h2>Meet Our Dental Team</h2>
+					<p>Our experienced</p>
 				</div>
-				<!-- team-member -->
+				<!-- team-grid -->
 				<div>
-					<img src="" alt="">
-					<!-- team-info -->
+					<!-- team-member -->
 					<div>
-						<h3></h3>
-						<p></p>
-						<p></p>
-					</div>
-				</div>
-				<!-- team-member -->
-				<div>
-					<img src="" alt="">
-					<!-- team-info -->
-					<div>
-						<h3></h3>
-						<p></p>
-						<p></p>
-					</div>
-				</div>
-				
-			</div>
-			<!-- text-center -->
-			<div>
-				<a href="about.html">meet our full team</a>
-			</div>
-		</div>
-	  </section>
-	  <!-- Testimonial Section -->
-	<section>
-		<!-- conteiner -->
-		<div>
-			<!-- grid-2-calmns -->
-			<div>
-				<!-- testimonials-content -->
-				<div>
-					<div>Testimonials</div>
-					<div>
-						<h2>What Ouir Patients Say</h2>
-					</div>
-					<div>
-						<div><img src="" alt=""></div>
+						<img src="" alt="">
+						<!-- team-info -->
 						<div>
-							<p>"i ve been coming"</p>
-							<p>- Jennifer L.</p>
+							<h3></h3>
+							<p></p>
+							<p></p>
+						</div>
+					</div>
+					<!-- team-member -->
+					<div>
+						<img src="" alt="">
+						<!-- team-info -->
+						<div>
+							<h3></h3>
+							<p></p>
+							<p></p>
+						</div>
+					</div>
+					<!-- team-member -->
+					<div>
+						<img src="" alt="">
+						<!-- team-info -->
+						<div>
+							<h3></h3>
+							<p></p>
+							<p></p>
+						</div>
+					</div>
+
+				</div>
+				<!-- text-center -->
+				<div>
+					<a href="about.html">meet our full team</a>
+				</div>
+			</div>
+		</section>
+		<!-- Testimonial Section -->
+		<section>
+			<!-- container -->
+			<div>
+				<!-- grid-2-columns -->
+				<div>
+					<!-- testimonials-content -->
+					<div>
+						<div>Testimonials</div>
+						<div>
+							<h2>What our Patients Say</h2>
 						</div>
 						<div>
 							<div><img src="" alt=""></div>
 							<div>
-								<p>"My kids love...</p>
-								<p>- Mark T...</p>
+								<p>"i ve been coming"</p>
+								<p>- Jennifer L.</p>
+							</div>
+							<div>
+								<div><img src="" alt=""></div>
+								<div>
+									<p>"My kids love...</p>
+									<p>- Mark T...</p>
+								</div>
 							</div>
 						</div>
 					</div>
-				</div>
-				<!-- apointment-content -->
-				<div>
-				  <!-- badge -->
+					<!-- appointment-content -->
+					<div>
+						<!-- badge -->
 						<div>Schedule a Visit</div>
-                        <h2>Book Your Appointment</h2>
+						<h2>Book Your Appointment</h2>
 						<p>We re accepting...</p>
-						<!-- feetures -->
+						<!-- features -->
 						<div>
 							<!-- feature -->
 							<div>
@@ -222,70 +222,70 @@
 							<a href="#">Schedule now</a>
 						</div>
 					</div>
+				</div>
 			</div>
-		</div>
-	</section>
-	<section>
-		<div>
+		</section>
+		<section>
 			<div>
 				<div>
-					<h2>Contact Us</h2>
-					<p>Have questions...</p>
-				    <div>
+					<div>
+						<h2>Contact Us</h2>
+						<p>Have questions...</p>
 						<div>
-							<div><img src="#" alt="#"></div>
 							<div>
-								<p>Location</p>
-								<p>123 Dental way...</p>
+								<div><img src="#" alt="#"></div>
+								<div>
+									<p>Location</p>
+									<p>123 Dental way...</p>
+								</div>
+							</div>
+							<div>
+								<div><img src="#" alt="#"></div>
+								<div>
+									<p>Phone...</p>
+									<p>555...</p>
+								</div>
+							</div>
+							<div>
+								<div><img src="#" alt="#"></div>
+								<div>
+									<p>Hours</p>
+									<p>Hours</p>
+									<p>monday-fryday...</p>
+									<p>Saturday...</p>
+									<p>sunday...</p>
+								</div>
 							</div>
 						</div>
-						<div>
-							<div><img src="#" alt="#"></div>
-							<div>
-								<p>Phone...</p>
-								<p>555...</p>
-							</div>
-						</div>
-						<div>
-							<div><img src="#" alt="#"></div>
-							<div>
-								<p>Hours</p>
-								<p>Hours</p>
-								<p>monday-fryday...</p>
-                                <p>Saturday...</p>
-								<p>sunday...</p>
-							</div>	
-						</div>
-					</div> 
-				</div>
-				<!-- meore charcho -->
-				<div>
-					<form action="#">
+					</div>
+					<!-- meore charcho - LOL what ? -->
+					<div>
+						<form action="#">
 
-						<div>
 							<div>
-								<label for="">First name</label>
+								<div>
+									<label for="">First name</label>
+									<input type="text">
+								</div>
+								<div>
+									<label for="">Last name</label>
+									<input type="text">
+								</div>
+							</div>
+							<div>
+								<label for="">Email</label>
 								<input type="text">
 							</div>
 							<div>
-								<label for="">Last name</label>
+								<label for="">Message</label>
 								<input type="text">
 							</div>
-						</div>
-						<div>
-							<label for="">Email</label>
-								<input type="text">
-						</div>
-						<div>
-							<label for="">Message</label>
-								<input type="text">
-						</div>
-						<button>send masseges</button>
-					</form>
+							<button>Send massages</button>
+						</form>
+					</div>
 				</div>
 			</div>
-		</div>
-	</section>
+		</section>
 	</main>
 
 	<!-- Footer will be injected by JavaScript -->
