edited css and added class on hero section elements

--- a/index.html
+++ b/index.html
@@ -22,27 +22,27 @@
 
 	<main class="main-content" id="main-content">
 		<!-- hero-section -->
-		<section>
+		<section class="hero-section">
 			<!-- container -->
-			<div>
+			<div class="container">
 				<!-- hero-grid  -->
-				<div>
+				<div class="hero-grid">
 					<!-- hero-content -->
-					<div>
+					<div class="hero-content">
 						<!-- hero-text -->
-						<div>
+						<div class="hero-text">
 							<h1>Your Smile, Our Passion.</h1>
 							<p>Experience exceptional dental care with our team</p>
 						</div>
 						<!-- hero-buttons -->
-						<div>
-							<a href="#">Book an Appointment</a>
-							<a href="#">Our Services</a>
+						<div class="hero-buttons">
+							
+							<a href="services.html" class="btn btn-outline">Our Services</a>
 						</div>
 					</div>
 					<!-- hero-image -->
-					<div>
-						<img src="" alt="">
+					<div class="hero-image">
+						<img src="assets/images/placeholder.svg" alt="dental team with patient" width="550" height="550">
 
 					</div>
 				</div>
