Created Team Section With Members Grid

--- a/about.html
+++ b/about.html
@@ -53,6 +53,48 @@
 		</div>
 	</div>
 </section>
+<!-- Team section  -->
+<section>
+	<!-- container  -->
+	<div>
+		<!-- section header text-center  -->
+      <div>
+		<h2>Our Team</h2>
+		<p>Meet The Dedicated Team</p>
+	  </div>
+	   <!-- Team-grid  -->
+		<div>
+			<!-- Team-member  -->
+			<div>
+				<img src=""  alt="">
+				 <!-- member-info  -->
+				<div>
+					<h3>Dr1</h3>
+					<!-- member-title  -->
+					<p>Dr1 Position</p>
+					<!-- member bio  -->
+					<p>Dr1 Description</p>
+				</div>
+			</div>
+			<div>
+				<img src=""  alt="">
+				<div>
+					<h3>Dr2</h3>
+					<p>Dr2 Position</p>
+					<p>Dr2 Description</p>
+				</div>
+			</div>
+			<div>
+				<img src=""  alt="">
+				<div>
+					<h3>Dr3</h3>
+					<p>Dr3 Position</p>
+					<p>Dr3 Description</p>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
 </main>
 
 	<!-- Footer will be injected by JavaScript -->
