added service classes for html

--- a/index.html
+++ b/index.html
@@ -49,57 +49,56 @@
 			</div>
 		</section>
 		<!-- Implement services grid -->
-		<section>
-			<!-- container -->
-			<div>
+		 <section class="services-section">
+			<div class="container">
 				<!-- section-header text-center -->
-				<div>
+				<div class="section-header text-center">
 					<!-- badge -->
-					<div>why choose us</div>
+					<div class="badge">why choose us</div>
 					<h2>Comprehensive Dental Care</h2>
 					<p>we offer a wide range ...</p>
 				</div>
 				<!-- services-grid -->
-				<div>
+				<div class="services-grid">
 					<!-- service-card -->
-					<div>
+					<div class="service-card">
 						<!-- service-icon -->
-						<div>
+						<div class="service-icon">
 							<img>
 						</div>
 						<h3>Preventive Care</h3>
 						<p>Regular check-ups ...</p>
 					</div>
-					<div>
-						<div>
+					<div class="service-card">
+						<div class="service-icon">
 							<img>
 						</div>
 						<h3>Preventive Care</h3>
 						<p>Regular check-ups ...</p>
 					</div>
-					<div>
-						<div>
+					<div class="service-card">
+						<div class="service-icon">
 							<img>
 						</div>
 						<h3>Preventive Care</h3>
 						<p>Regular check-ups ...</p>
 					</div>
-					<div>
-						<div>
+					<div class="service-card">
+						<div class="service-icon">
 							<img>
 						</div>
 						<h3>Preventive Care</h3>
 						<p>Regular check-ups ...</p>
 					</div>
-					<div>
-						<div>
+					<div class="service-card">
+						<div class="service-icon">
 							<img>
 						</div>
 						<h3>Preventive Care</h3>
 						<p>Regular check-ups ...</p>
 					</div>
-					<div>
-						<div>
+					<div class="service-card">
+						<div class="service-icon">
 							<img>
 						</div>
 						<h3>Preventive Care</h3>
