--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,18 @@
 
 	<main class="main-content" id="main-content">
 		<!-- hero-section -->
-
+		<section>
+			<!-- container -->
+			<div>
+				<!-- text-center -->
+				<div>
+		
+					<h1>Contact Us</h1>
+					<!-- hero-subtitle  -->
+					<p>We are here to answer...</p>
+				</div>
+			</div>
+		</section>
 	</main>
 
 	<!-- Footer will be injected by JavaScript -->
