add team-section css styling

--- a/index.html
+++ b/index.html
@@ -108,51 +108,51 @@
 			</div>
 		</section>
 		<!-- team-section -->
-		<section>
+		<section class="team-section">
 			<!-- container -->
-			<div>
+			<div class="container">
 				<!-- section-header -->
-				<div>
+				<div class="section-header text-center">
 					<h2>Meet Our Dental Team</h2>
 					<p>Our experienced</p>
 				</div>
 				<!-- team-grid -->
-				<div>
+				<div class="team-grid">
 					<!-- team-member -->
-					<div>
-						<img src="" alt="">
+					<div class="team-member">
+						<img src="assets/images/placeholder.svg" alt="">
 						<!-- team-info -->
-						<div>
-							<h3></h3>
-							<p></p>
-							<p></p>
+						<div class="team-info">
+							<h3>Doctor Sara</h3>
+							<p class="member-title">General Dantist</p>
+							<p class="member-bio">test</p>
 						</div>
 					</div>
 					<!-- team-member -->
-					<div>
-						<img src="" alt="">
+					<div class="team-member">
+						<img src="assets/images/placeholder.svg" alt="">
 						<!-- team-info -->
-						<div>
-							<h3></h3>
-							<p></p>
-							<p></p>
+						<div class="team-info">
+							<h3>Doctor Sara</h3>
+							<p class="member-title">General Dantist</p>
+							<p class="member-bio">test</p>
 						</div>
 					</div>
 					<!-- team-member -->
-					<div>
-						<img src="" alt="">
+					<div class="team-member">
+						<img src="assets/images/placeholder.svg" alt="">
 						<!-- team-info -->
-						<div>
-							<h3></h3>
-							<p></p>
-							<p></p>
+						<div class="team-info">
+							<h3>Doctor Sara</h3>
+							<p class="member-title">General Dantist</p>
+							<p class="member-bio">test</p>
 						</div>
 					</div>
-
+					<!-- team-member -->
 				</div>
 				<!-- text-center -->
-				<div>
-					<a href="about.html">meet our full team</a>
+				<div class="text-center">
+					<a class="btn btn-outline" href="about.html">meet our full team <span class="icon-right">→</span></a>
 				</div>
 			</div>
 		</section>
