--- a/contact.html
+++ b/contact.html
@@ -105,8 +105,35 @@
 					
 				</div>
 				<!-- task-2=send us messege -->
-				 <div></div>
+				 <div>
+					<div>
+						<h2>send us message</h2>
+						<p>....</p>
+					</div>
+					<div>
+						<div><lable>First name</lable>
+						<input type="text">
+							
+
+						</div>
+						<div>
+							<lable>Last name</lable>
+							<input type="text">
+						</div>
+					</div>
+						<div><lable>Email</lable>
+						<input type="text"></div>
+						<div><lable>Phone</lable>
+						<input type="text"></div>
+						<div><lable>Subject</lable>
+						<input type="text"></div>
+						<div><lable>Message</lable>
+						<input type="textarea"></div>
+						<button>Send us message</button>
+					</div>
+				 </div>
 			</div>
+			
 		</Section>	
 
 	</main>
