--- a/index.html
+++ b/index.html
@@ -157,129 +157,170 @@
 			</div>
 		</section>
 		<!-- Testimonial Section -->
-		<section>
+		<section class="testimonials-section">
 			<!-- container -->
-			<div>
+			<div class="container">
 				<!-- grid-2-columns -->
-				<div>
+				<div class="grid-2-columns">
 					<!-- testimonials-content -->
-					<div>
-						<div>Testimonials</div>
-						<div>
-							<h2>What our Patients Say</h2>
-						</div>
-						<div>
-							<div><img src="" alt=""></div>
-							<div>
-								<p>"i ve been coming"</p>
-								<p>- Jennifer L.</p>
-							</div>
-							<div>
-								<div><img src="" alt=""></div>
+					<div class="testimonials-content">
+						<div class="badge">Testimonials</div>
+						<h2>What our Patients Say</h2>
+						<div class="testimonials">
+							<div class="testimonial">
+
+								<div class="rating">
+									<span class="star">★</span>
+									<span class="star">★</span>
+									<span class="star">★</span>
+									<span class="star">★</span>
+									<span class="star">★</span>
+								</div>
 								<div>
-									<p>"My kids love...</p>
-									<p>- Mark T...</p>
+									<p>"i ve been coming"</p>
+									<p class="author">- Jennifer L.</p>
+								</div>
+							</div>
+							<div class="testimonial">
+
+								<div class="rating">
+									<span class="star">★</span>
+									<span class="star">★</span>
+									<span class="star">★</span>
+									<span class="star">★</span>
+									<span class="star">★</span>
+								</div>
+								<div>
+									<p>"i ve been coming"</p>
+									<p class="author">- Jennifer L.</p>
 								</div>
 							</div>
 						</div>
 					</div>
 					<!-- appointment-content -->
-					<div>
+					<div class="appointment-content">
 						<!-- badge -->
-						<div>Schedule a Visit</div>
+						<div class="badge">Schedule a Visit</div>
 						<h2>Book Your Appointment</h2>
 						<p>We re accepting...</p>
 						<!-- features -->
-						<div>
+						<div class="features">
 							<!-- feature -->
-							<div>
+							<div class="feature">
 								<!-- feature-icon -->
-								<div></div>
+								<div class="feature-icon">
+									<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon">
+                                        <rect width="18" height="18" x="3" y="4" rx="2" ry="2" />
+                                        <line x1="16" x2="16" y1="2" y2="6" />
+                                        <line x1="8" x2="8" y1="2" y2="6" />
+                                        <line x1="3" x2="21" y1="10" y2="10" />
+                                    </svg>
+								</div>
 								<div>
-									<h3></h3>
-									<p></p>
+									<h3>schaduling</h3>
+									<p>book online</p>
 								</div>
 							</div>
-							<!-- feature -->
-							<div>
+							<div class="feature">
 								<!-- feature-icon -->
-								<div></div>
+								<div class="feature-icon">
+									<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon">
+                                        <rect width="18" height="18" x="3" y="4" rx="2" ry="2" />
+                                        <line x1="16" x2="16" y1="2" y2="6" />
+                                        <line x1="8" x2="8" y1="2" y2="6" />
+                                        <line x1="3" x2="21" y1="10" y2="10" />
+                                    </svg>
+								</div>
 								<div>
-									<h3></h3>
-									<p></p>
+									<h3>schaduling</h3>
+									<p>book online</p>
 								</div>
 							</div>
-							<!-- feature -->
-							<div>
+							<div class="feature">
 								<!-- feature-icon -->
-								<div></div>
+								<div class="feature-icon">
+									<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon">
+                                        <rect width="18" height="18" x="3" y="4" rx="2" ry="2" />
+                                        <line x1="16" x2="16" y1="2" y2="6" />
+                                        <line x1="8" x2="8" y1="2" y2="6" />
+                                        <line x1="3" x2="21" y1="10" y2="10" />
+                                    </svg>
+								</div>
 								<div>
-									<h3></h3>
-									<p></p>
+									<h3>schaduling</h3>
+									<p>book online</p>
 								</div>
 							</div>
-							<a href="#">Schedule now</a>
+							<a href="#" class="btn btn-primary btn-block">Schedule now</a>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-		<section>
-			<div>
-				<div>
-					<div>
+		<section class="contact-section">
+			<div class="container">
+				<div class="grid-2-columns">
+					<div class="contact-info">
 						<h2>Contact Us</h2>
 						<p>Have questions...</p>
-						<div>
-							<div>
-								<div><img src="#" alt="#"></div>
+						<div class="contact-details">
+							<div class="contact-item">
+								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon">
+                                    <path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z" />
+                                    <circle cx="12" cy="10" r="3" />
+                                </svg>
+
 								<div>
 									<p>Location</p>
 									<p>123 Dental way...</p>
 								</div>
 							</div>
-							<div>
-								<div><img src="#" alt="#"></div>
+							<div class="contact-item">
+								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon">
+                                    <path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z" />
+                                    <circle cx="12" cy="10" r="3" />
+                                </svg>
+
 								<div>
-									<p>Phone...</p>
-									<p>555...</p>
+									<p>Location</p>
+									<p>123 Dental way...</p>
 								</div>
 							</div>
-							<div>
-								<div><img src="#" alt="#"></div>
+							<div class="contact-item">
+								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon">
+                                    <path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z" />
+                                    <circle cx="12" cy="10" r="3" />
+                                </svg>
+
 								<div>
-									<p>Hours</p>
-									<p>Hours</p>
-									<p>monday-fryday...</p>
-									<p>Saturday...</p>
-									<p>sunday...</p>
+									<p>Location</p>
+									<p>123 Dental way...</p>
 								</div>
 							</div>
 						</div>
 					</div>
-					<!-- meore charcho - LOL what ? -->
-					<div>
-						<form action="#">
+					<div class="contact-form">
+						<form id="home-contact-form">
 
-							<div>
-								<div>
+							<div class="form-row">
+								<div class="form-group">
 									<label for="">First name</label>
 									<input type="text">
 								</div>
-								<div>
+								<div class="form-group">
 									<label for="">Last name</label>
 									<input type="text">
 								</div>
 							</div>
-							<div>
+							<div class="form-group">
 								<label for="">Email</label>
 								<input type="text">
 							</div>
-							<div>
+							<div class="form-group">
 								<label for="">Message</label>
 								<input type="text">
 							</div>
-							<button>Send massages</button>
+							<button class="btn btn-primary btn-block">Send massages</button>
 						</form>
 					</div>
 				</div>
