Created Empty Mission Elements With Value Items

--- a/about.html
+++ b/about.html
@@ -95,6 +95,73 @@
 		</div>
 	</div>
 </section>
+<!-- mission Section  -->
+<section>
+	<!-- container  -->
+	<div>
+		<!-- grid-2-columns -->
+		<div>
+			<!-- content  -->
+			<div>
+				<h2>Our Mission And Values</h2>
+				<p>Magaliti</p>
+				<!-- values  -->
+				<div>
+					<!-- value-item  -->
+					<div>
+						<!-- value-icon  -->
+						<div>
+
+							<img src="" alt="">
+						</div>
+						<div>
+							<h3>Rame</h3>
+							<p>Paragraph 3</p>
+						</div>
+					</div>
+					<!-- value-item  -->
+					<div>
+						<!-- value-icon  -->
+						<div>
+
+							<img src="" alt="">
+						</div>
+						<div>
+							<h3>Rame</h3>
+							<p>Paragraph 3</p>
+						</div>
+					</div>
+					<!-- value-item  -->
+					<div>
+						<!-- value-icon  -->
+						<div>
+
+							<img src="" alt="">
+						</div>
+						<div>
+							<h3>Rame</h3>
+							<p>Paragraph 3</p>
+						</div>
+					</div>
+					<!-- value-item  -->
+					<div>
+						<!-- value-icon  -->
+						<div>
+
+							<img src="" alt="">
+						</div>
+						<div>
+							<h3>Rame</h3>
+							<p>Paragraph 3</p>
+						</div>
+					</div>
+				</div>
+
+			</div>
+			<img src="" alt="">
+		</div>
+	</div>
+</section>
 </main>
 
 	<!-- Footer will be injected by JavaScript -->
