Created Facility Section With Facility Items

--- a/about.html
+++ b/about.html
@@ -162,6 +162,38 @@
 		</div>
 	</div>
 </section>
+<!-- Facility Section  -->
+ <section>
+	<!-- Container  -->
+	<div>
+		<!-- Section-Header  -->
+		<div>
+			<h2>Our Facility</h2>
+			<p>Our Modern Dental Office</p>
+		</div>
+		<!-- Facility-Grid  -->
+		<div>
+			<!-- Facility-Item  -->
+			<div>
+				<img src="" alt="">
+				<h3>Welcome</h3>
+				<p>Our Comfortable </p>
+			</div>
+			<!-- Facility-Item  -->
+			<div>
+				<img src="" alt="">
+				<h3>Welcome</h3>
+				<p>Our Comfortable </p>
+			</div>
+			<!-- Facility-Item  -->
+			<div>
+				<img src="" alt="">
+				<h3>Welcome</h3>
+				<p>Our Comfortable </p>
+			</div>
+		</div>
+	</div>
+ </section>
 </main>
 
 	<!-- Footer will be injected by JavaScript -->
