Created CTA section with cta buttons

--- a/about.html
+++ b/about.html
@@ -194,6 +194,22 @@
 		</div>
 	</div>
  </section>
+   <!-- cta section  -->
+    <section>
+		<!-- container  -->
+		<div>
+			<!-- text-center  -->
+			<div>
+				<h2>Ready To Schedule?</h2>
+				<p>Expecting new patients</p>
+				<!-- cta-buttons  -->
+				<div>
+					<a href="">Book Appointment</a>
+					<a href="">Contact Us</a>
+				</div>
+			</div>
+		</div>
+	</section>
 </main>
 
 	<!-- Footer will be injected by JavaScript -->
