Added Class Attributes And CSS Selectors

--- a/about.html
+++ b/about.html
@@ -22,13 +22,13 @@
 
 	<main class="main-content" id="main-content">
 		<!-- hero-section -->
-<section>
+<section class="hero-section">
 	<!-- container -->
-	<div>
+	<div class="container">
 		<!-- text-center -->
-		<div>
+		<div class="text-center">
 			<h1>About Dentilur</h1>
-			<p>Template Dentilur</p>
+			<p class="hero-subtitle">Template Dentilur</p>
 		</div>
 	</div>
 
