--- a/about.html
+++ b/about.html
@@ -35,20 +35,20 @@
 </section>
 
 <!-- story-section  -->
-<section>
+<section class="story-section">
 	<!-- container  -->
-	<div>
+	<div class="container">
 		<!-- Grid-2-Columns  -->
-		<div>
-			<img src="" alt="">
+		<div class="grid-2-columns items-center">
+			<img class="rounded-img" src="assets/images/placeholder.svg" alt="">
 			<!-- Content  -->
-			<div>
+			<div class="content">
 				<h2>
 					Our Story
 				</h2>
-				<p> </p>
-				<p> </p>
-				<p> </p>
+				<p>afaa </p>
+				<p>agag </p>
+				<p>hah </p>
 			</div>
 		</div>
 	</div>
