Added Class Attributes And CSS Selector Team

--- a/about.html
+++ b/about.html
@@ -54,42 +54,48 @@
 	</div>
 </section>
 <!-- Team section  -->
-<section>
+<section class="team-section">
 	<!-- container  -->
-	<div>
+	<div class="container">
 		<!-- section header text-center  -->
-      <div>
+      <div class="section-header text-center">
 		<h2>Our Team</h2>
 		<p>Meet The Dedicated Team</p>
 	  </div>
 	   <!-- Team-grid  -->
-		<div>
+		<div class="team-grid">
 			<!-- Team-member  -->
-			<div>
-				<img src=""  alt="">
+			<div class="team-member">
+				<img src="assets/images/placeholder.svg"  alt="">
 				 <!-- member-info  -->
-				<div>
+				<div class="member-info">
 					<h3>Dr1</h3>
 					<!-- member-title  -->
-					<p>Dr1 Position</p>
+					<p class="member-title">Dr1 Position</p>
 					<!-- member bio  -->
-					<p>Dr1 Description</p>
+					<p class="member-bio">Dr1 Description</p>
 				</div>
 			</div>
-			<div>
-				<img src=""  alt="">
-				<div>
-					<h3>Dr2</h3>
-					<p>Dr2 Position</p>
-					<p>Dr2 Description</p>
+			<div class="team-member">
+				<img src="assets/images/placeholder.svg"  alt="">
+				 <!-- member-info  -->
+				<div class="member-info">
+					<h3>Dr1</h3>
+					<!-- member-title  -->
+					<p class="member-title">Dr1 Position</p>
+					<!-- member bio  -->
+					<p class="member-bio">Dr1 Description</p>
 				</div>
 			</div>
-			<div>
-				<img src=""  alt="">
-				<div>
-					<h3>Dr3</h3>
-					<p>Dr3 Position</p>
-					<p>Dr3 Description</p>
+			<div class="team-member">
+				<img src="assets/images/placeholder.svg"  alt="">
+				 <!-- member-info  -->
+				<div class="member-info">
+					<h3>Dr1</h3>
+					<!-- member-title  -->
+					<p class="member-title">Dr1 Position</p>
+					<!-- member bio  -->
+					<p class="member-bio">Dr1 Description</p>
 				</div>
 			</div>
 		</div>
