hero section with multi lang

--- a/index.html
+++ b/index.html
@@ -31,25 +31,27 @@
 					<div class="hero-content">
 						<!-- hero-text -->
 						<div class="hero-text">
-							<h1>Your Smile, Our Passion.</h1>
-							<p>Experience exceptional dental care with our team</p>
+							<h1 data-i18n="home.hero.title">Healthy & Beautiful Smiles, Guaranteed</h1>
+							<p data-i18n="home.hero.subtitle">Trust our experienced team for comprehensive dental care.
+								We're dedicated to your long-term oral health and a smile you'll love.</p>
 						</div>
 						<!-- hero-buttons -->
 						<div class="hero-buttons">
-							
-							<a href="services.html" class="btn btn-outline">Our Services</a>
+							<a href="#" class="btn btn-primary" data-i18n="home.hero.btn1">Book an Appointment</a>
+							<a href="services.html" class="btn btn-outline" data-i18n="home.hero.btn2">Our Services</a>
 						</div>
 					</div>
 					<!-- hero-image -->
 					<div class="hero-image">
-						<img src="assets/images/placeholder.svg" alt="dental team with patient" width="550" height="550">
+						<img src="assets/images/placeholder.svg" alt="dental team with patient" width="550"
+							height="550">
 
 					</div>
 				</div>
 			</div>
 		</section>
 		<!-- Implement services grid -->
-		 <section class="services-section">
+		<section class="services-section">
 			<div class="container">
 				<!-- section-header text-center -->
 				<div class="section-header text-center">
@@ -152,7 +154,8 @@
 				</div>
 				<!-- text-center -->
 				<div class="text-center">
-					<a class="btn btn-outline" href="about.html">meet our full team <span class="icon-right">→</span></a>
+					<a class="btn btn-outline" href="about.html">meet our full team <span
+							class="icon-right">→</span></a>
 				</div>
 			</div>
 		</section>
@@ -209,12 +212,14 @@
 							<div class="feature">
 								<!-- feature-icon -->
 								<div class="feature-icon">
-									<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon">
-                                        <rect width="18" height="18" x="3" y="4" rx="2" ry="2" />
-                                        <line x1="16" x2="16" y1="2" y2="6" />
-                                        <line x1="8" x2="8" y1="2" y2="6" />
-                                        <line x1="3" x2="21" y1="10" y2="10" />
-                                    </svg>
+									<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+										fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+										stroke-linejoin="round" class="icon">
+										<rect width="18" height="18" x="3" y="4" rx="2" ry="2" />
+										<line x1="16" x2="16" y1="2" y2="6" />
+										<line x1="8" x2="8" y1="2" y2="6" />
+										<line x1="3" x2="21" y1="10" y2="10" />
+									</svg>
 								</div>
 								<div>
 									<h3>schaduling</h3>
@@ -224,12 +229,14 @@
 							<div class="feature">
 								<!-- feature-icon -->
 								<div class="feature-icon">
-									<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon">
-                                        <rect width="18" height="18" x="3" y="4" rx="2" ry="2" />
-                                        <line x1="16" x2="16" y1="2" y2="6" />
-                                        <line x1="8" x2="8" y1="2" y2="6" />
-                                        <line x1="3" x2="21" y1="10" y2="10" />
-                                    </svg>
+									<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+										fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+										stroke-linejoin="round" class="icon">
+										<rect width="18" height="18" x="3" y="4" rx="2" ry="2" />
+										<line x1="16" x2="16" y1="2" y2="6" />
+										<line x1="8" x2="8" y1="2" y2="6" />
+										<line x1="3" x2="21" y1="10" y2="10" />
+									</svg>
 								</div>
 								<div>
 									<h3>schaduling</h3>
@@ -239,12 +246,14 @@
 							<div class="feature">
 								<!-- feature-icon -->
 								<div class="feature-icon">
-									<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon">
-                                        <rect width="18" height="18" x="3" y="4" rx="2" ry="2" />
-                                        <line x1="16" x2="16" y1="2" y2="6" />
-                                        <line x1="8" x2="8" y1="2" y2="6" />
-                                        <line x1="3" x2="21" y1="10" y2="10" />
-                                    </svg>
+									<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+										fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+										stroke-linejoin="round" class="icon">
+										<rect width="18" height="18" x="3" y="4" rx="2" ry="2" />
+										<line x1="16" x2="16" y1="2" y2="6" />
+										<line x1="8" x2="8" y1="2" y2="6" />
+										<line x1="3" x2="21" y1="10" y2="10" />
+									</svg>
 								</div>
 								<div>
 									<h3>schaduling</h3>
@@ -265,10 +274,12 @@
 						<p>Have questions...</p>
 						<div class="contact-details">
 							<div class="contact-item">
-								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon">
-                                    <path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z" />
-                                    <circle cx="12" cy="10" r="3" />
-                                </svg>
+								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+									fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+									stroke-linejoin="round" class="icon">
+									<path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z" />
+									<circle cx="12" cy="10" r="3" />
+								</svg>
 
 								<div>
 									<p>Location</p>
@@ -276,10 +287,12 @@
 								</div>
 							</div>
 							<div class="contact-item">
-								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon">
-                                    <path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z" />
-                                    <circle cx="12" cy="10" r="3" />
-                                </svg>
+								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+									fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+									stroke-linejoin="round" class="icon">
+									<path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z" />
+									<circle cx="12" cy="10" r="3" />
+								</svg>
 
 								<div>
 									<p>Location</p>
@@ -287,10 +300,12 @@
 								</div>
 							</div>
 							<div class="contact-item">
-								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon">
-                                    <path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z" />
-                                    <circle cx="12" cy="10" r="3" />
-                                </svg>
+								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+									fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+									stroke-linejoin="round" class="icon">
+									<path d="M20 10c0 6-8 12-8 12s-8-6-8-12a8 8 0 0 1 16 0Z" />
+									<circle cx="12" cy="10" r="3" />
+								</svg>
 
 								<div>
 									<p>Location</p>
