--- a/index.html
+++ b/index.html
@@ -50,15 +50,17 @@
 				</div>
 			</div>
 		</section>
-		<!-- Implement services grid -->
+		<!-- services-section -->
 		<section class="services-section">
+			<!-- container -->
 			<div class="container">
 				<!-- section-header text-center -->
 				<div class="section-header text-center">
 					<!-- badge -->
-					<div class="badge">why choose us</div>
-					<h2>Comprehensive Dental Care</h2>
-					<p>we offer a wide range ...</p>
+					<div class="badge" data-i18n="home.services.badge">Why Choose Us</div>
+					<h2 data-i18n="home.services.title">Comprehensive Dental Care</h2>
+					<p data-i18n="home.services.subtitle">We offer a wide range of dental services to meet all your oral
+						health needs in one convenient location.</p>
 				</div>
 				<!-- services-grid -->
 				<div class="services-grid">
@@ -66,45 +68,87 @@
 					<div class="service-card">
 						<!-- service-icon -->
 						<div class="service-icon">
-							<img>
+							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+								fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+								stroke-linejoin="round" class="icon">
+								<path
+									d="M3.85 8.62a4 4 0 0 1 4.78-4.77 4 4 0 0 1 6.74 0 4 4 0 0 1 4.78 4.78 4 4 0 0 1 0 6.74 4 4 0 0 1-4.77 4.78 4 4 0 0 1-6.75 0 4 4 0 0 1-4.78-4.77 4 4 0 0 1 0-6.76Z" />
+								<path d="m9 12 2 2 4-4" />
+							</svg>
 						</div>
-						<h3>Preventive Care</h3>
-						<p>Regular check-ups ...</p>
+						<h3 data-i18n="home.services.preventiveCare.title">Preventive Care</h3>
+						<p data-i18n="home.services.preventiveCare.description">Regular check-ups, cleanings, and
+							screenings to prevent dental issues before they start.</p>
 					</div>
 					<div class="service-card">
 						<div class="service-icon">
-							<img>
+							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+								fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+								stroke-linejoin="round" class="icon">
+								<path
+									d="M19 14c1.49-1.46 3-3.21 3-5.5A5.5 5.5 0 0 0 16.5 3c-1.76 0-3 .5-4.5 2-1.5-1.5-2.74-2-4.5-2A5.5 5.5 0 0 0 2 8.5c0 2.3 1.5 4.05 3 5.5l7 7Z" />
+							</svg>
 						</div>
-						<h3>Preventive Care</h3>
-						<p>Regular check-ups ...</p>
+						<h3 data-i18n="home.services.cosmeticDentistry.title">Cosmetic Dentistry</h3>
+						<p data-i18n="home.services.cosmeticDentistry.description">Enhance your smile with teeth
+							whitening, veneers, and other cosmetic procedures.</p>
 					</div>
 					<div class="service-card">
 						<div class="service-icon">
-							<img>
+							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+								fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+								stroke-linejoin="round" class="icon">
+								<path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10" />
+							</svg>
 						</div>
-						<h3>Preventive Care</h3>
-						<p>Regular check-ups ...</p>
+						<h3 data-i18n="home.services.restorativeServices.title">Restorative Services</h3>
+						<p data-i18n="home.services.restorativeServices.description">Repair damaged teeth with fillings,
+							crowns, bridges, and dental implants.</p>
 					</div>
 					<div class="service-card">
 						<div class="service-icon">
-							<img>
+							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+								fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+								stroke-linejoin="round" class="icon">
+								<path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2" />
+								<circle cx="9" cy="7" r="4" />
+								<path d="M22 21v-2a4 4 0 0 0-3-3.87" />
+								<path d="M16 3.13a4 4 0 0 1 0 7.75" />
+							</svg>
 						</div>
-						<h3>Preventive Care</h3>
-						<p>Regular check-ups ...</p>
+						<h3 data-i18n="home.services.familyDentistry.title">Family Dentistry</h3>
+						<p data-i18n="home.services.familyDentistry.description">Dental care for patients of all ages,
+							from children to seniors.</p>
 					</div>
 					<div class="service-card">
 						<div class="service-icon">
-							<img>
+							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+								fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+								stroke-linejoin="round" class="icon">
+								<path d="M4 19.5v-15A2.5 2.5 0 0 1 6.5 2H20v20H6.5a2.5 2.5 0 0 1-2.5-2.5Z" />
+								<path d="M8 7h6" />
+								<path d="M8 11h8" />
+								<path d="M8 15h6" />
+							</svg>
 						</div>
-						<h3>Preventive Care</h3>
-						<p>Regular check-ups ...</p>
+						<h3 data-i18n="home.services.emergencyCare.title">Emergency Care</h3>
+						<p data-i18n="home.services.emergencyCare.description">Prompt treatment for dental emergencies
+							such as toothaches or broken teeth.</p>
 					</div>
 					<div class="service-card">
 						<div class="service-icon">
-							<img>
+							<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+								fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+								stroke-linejoin="round" class="icon">
+								<path
+									d="M2 9V5c0-1.1.9-2 2-2h3.93a2 2 0 0 1 1.66.9l.82 1.2a2 2 0 0 0 1.66.9H20a2 2 0 0 1 2 2v10a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2v-1" />
+								<path d="M2 13h10" />
+								<path d="m9 16 3-3-3-3" />
+							</svg>
 						</div>
-						<h3>Preventive Care</h3>
-						<p>Regular check-ups ...</p>
+						<h3 data-i18n="home.services.advancedTechnology.title">Advanced Technology</h3>
+						<p data-i18n="home.services.advancedTechnology.description">State-of-the-art equipment and
+							techniques for more comfortable and effective treatments.</p>
 					</div>
 				</div>
 			</div>
